syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ballcorp.remote";
option java_outer_classname = "TouchpadProto";
option objc_class_prefix = "TPP";

package grpc;

service Touchpad {
  rpc Move (MoveRequest) returns (MoveReply) {}
}

message MoveRequest {
  repeated MoveEvent move_events = 1;
}

message MoveReply {}

message MoveEvent {
  int32 pointer_id = 1;
  int32 position_x = 2;
  int32 position_y = 3;
  int32 pressure = 4;
}

